<resources>
    <string name="app_name">Muziki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="artist">Artist</string>
    <string name="_1_00">1:00</string>
    <string name="_4_00">4:00</string>
    <string name="search">Search…</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="details">Details</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="all_songs">All Songs</string>
    <string name="albums">Albums</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="artists">Artists</string>
    <string name="play_lists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favorites</string>
    <string name="nav_header_desc">description</string>
    <string name="nav_header_title">name</string>
    <string name="nav_header_subtitle">email</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_playlist">Created playlists will be shown here</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="choose_a_playlist">Choose a playlist</string>
    <string name="new_playlist">new</string>
    <string name="save">save</string>
    <string name="playlist_name">Playlist name</string>
    <string name="_name">name</string>
    <string name="no_songs_to_show">No songs to show</string>
    <string name="no_albums">No albums on this device</string>
    <string name="sort">Sort by</string>
    <string name="semujju_sharif">Semujju Sharif</string>
    <string name="about">About us</string>
    <string name="title">Title</string>
    <string name="recently_added">Recently Added</string>
    <string name="reverse_order">Reverse order</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="current_playlist">Current Playlist</string>
</resources>