<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_songs"
            android:icon="@drawable/ic_music_note"
            android:title="@string/all_songs" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_albums"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_artist"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/play_lists" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/folders" />

    </group>
    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>