<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    app:cardBackgroundColor="@color/grey_900">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/grey_1000"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/create_a_new_playlist"
            android:textSize="20sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/choose"
            android:background="@color/white_t80" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_view"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/playlist_name"
                android:textColor="@color/white_t80"
                android:textSize="18sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/stroked_rectangle"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_playlist_white" />

                <EditText
                    android:id="@+id/playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/_name"
                    android:inputType="textCapSentences"
                    android:textColor="@color/white_t80"
                    android:textColorHint="@color/white_t30"
                    app:hintTextColor="@color/white_t30" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_layout"
            android:layout_marginTop="16dp"
            android:background="@color/grey_1000"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/playlist_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text="@string/play_lists" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/save"
                app:cornerRadius="4dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nothing_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/nothing_here"
                android:textSize="28sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_add"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_playlist"
                android:textColor="@color/white_t80" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>