<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    app:cardBackgroundColor="@color/grey_900">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/grey_1000"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/choose_a_playlist"
            android:textSize="24sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/choose"
            android:background="@color/white_t80" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_play_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            tools:listitem="@layout/rv_playlist_dialog_item" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_play_list"
            android:background="@color/grey_1000"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/playlist_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:textSize="20sp"
                tools:text="@string/play_lists" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/new_playlist"
                app:cornerRadius="4dp" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>