<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_t80">

        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/grey_1000"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/details"
            android:textSize="24sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/choose"
            android:background="@color/white_t80" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_view">

            <androidx.cardview.widget.CardView
                android:id="@+id/album_art_card"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_margin="16dp"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/grey_900"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/album_art"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/song_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white_t80"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/artist_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art_card"
                app:layout_constraintTop_toTopOf="@id/album_art_card"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/album_art_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art_card"
                app:layout_constraintTop_toBottomOf="@id/song_name" />


            <TextView
                android:id="@+id/album_name_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/album"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_art_card" />

            <TextView
                android:id="@+id/duration_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/duration"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_name_word" />

            <TextView
                android:id="@+id/location_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/location"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/duration" />

            <TextView
                android:id="@+id/album_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art_card"
                app:layout_constraintTop_toBottomOf="@id/album_art_card" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art_card"
                app:layout_constraintTop_toBottomOf="@id/album_name" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/album_art_card"
                app:layout_constraintTop_toBottomOf="@id/duration" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</RelativeLayout>